--- a/style.css
+++ b/style.css
@@ -552,7 +552,7 @@ body {
   text-align: center;
 }
 div.background {
-  background-image: url(illustration-bg-1-lg.jpg);
+  background-image: url(https://eoligive.sirv.com/illustration/illustration-bg-1-lg.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   /* background-color: #1da1f2; */
